// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 test with Sulfuras item 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Sulfuras, Hand of Ragnaros avec une qualité de 80",
  "La qualité est maintenant de 80, SellIn est égal à 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`2 test with Aged Brie updated 1x with 10 for sellIn and quality 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Aged Brie avec une qualité de 10",
  "La qualité est maintenant de 11, SellIn est égal à 9",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`3 test with Aged Brie when sellIn is negative 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Aged Brie avec une qualité de 10",
  "La qualité est maintenant de 11, SellIn est égal à 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Aged Brie avec une qualité de 11",
  "La qualité est maintenant de 12, SellIn est égal à 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Aged Brie avec une qualité de 12",
  "La qualité est maintenant de 14, SellIn est égal à -1",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`4 test with Backstage passes to a TAFKAL80ETC concert when 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 10",
  "La qualité est maintenant de 13, SellIn est égal à 4",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 13",
  "La qualité est maintenant de 16, SellIn est égal à 3",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`5 test with Backstage passes to a TAFKAL80ETC concert when sellIn is negative 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 10",
  "La qualité est maintenant de 13, SellIn est égal à 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 13",
  "La qualité est maintenant de 16, SellIn est égal à 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 16",
  "La qualité est maintenant de 0, SellIn est égal à -1",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`6 test with several items when quality goes over 50 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 48",
  "La qualité est maintenant de 49, SellIn est égal à 14",
  "Item - nom : Aged Brie avec une qualité de 48",
  "La qualité est maintenant de 49, SellIn est égal à 7",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 49",
  "La qualité est maintenant de 50, SellIn est égal à 13",
  "Item - nom : Aged Brie avec une qualité de 49",
  "La qualité est maintenant de 50, SellIn est égal à 6",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 50",
  "La qualité est maintenant de 50, SellIn est égal à 12",
  "Item - nom : Aged Brie avec une qualité de 50",
  "La qualité est maintenant de 50, SellIn est égal à 5",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Backstage passes to a TAFKAL80ETC concert avec une qualité de 50",
  "La qualité est maintenant de 50, SellIn est égal à 11",
  "Item - nom : Aged Brie avec une qualité de 50",
  "La qualité est maintenant de 50, SellIn est égal à 4",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`7 test with conjured 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 3",
  "La qualité est maintenant de 1, SellIn est égal à 14",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 1",
  "La qualité est maintenant de -1, SellIn est égal à 13",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de -1",
  "La qualité est maintenant de -1, SellIn est égal à 12",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de -1",
  "La qualité est maintenant de -1, SellIn est égal à 11",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;

exports[`8 test with conjured (2) 1`] = `
[
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 45",
  "La qualité est maintenant de 43, SellIn est égal à 2",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 43",
  "La qualité est maintenant de 41, SellIn est égal à 1",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 41",
  "La qualité est maintenant de 39, SellIn est égal à 0",
  "Fin de la mise à jour quotidienne de la qualité des items",
  "Mise à jour quotidienne de la qualité des items",
  "Item - nom : Conjured avec une qualité de 39",
  "La qualité est maintenant de 35, SellIn est égal à -1",
  "Fin de la mise à jour quotidienne de la qualité des items",
]
`;
